Throw exeption if user did not enter a number